# hackthon-0

./: .gitignore  APPROVAL_REQUIRED_ACTION_daily new things I learned.md  BRONZE_TIER_PROGRESS.md  Bronze_Tier_Checklist.md  Bronze_Tier_Setup_Guide.md  GOLD_TIER_PLAN.md  PLAN_EMAIL_19dac3e1ea3c1744_Indeed Application AI Automati.md  README.md  SILVER_TIER_PLAN.md  audit_logger.py  audit_logic.py  gold_openrouter_orchestrator.py  gold_orchestrator.py  linkedin_post_draft.txt  openrouter_agent.py  orchestrator.py  post_to_linkedin.py  pyproject.toml  python_orchestrator.py  requirements.txt  setup_task_scheduler.ps1  skills-lock.json  social_autopost.py  start_ai_employee.bat  test_gold_end_to_end.py  test_odoo.py  watchdog.py
.specify/memory/: constitution.md
AI_Employee_Vault/: .claude-code-config.json  Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: graph.json  workspace.json
AI_Employee_Vault/Approved/: APPROVAL_REQUIRED_ACTION_email_greeting.md  my_achievement.md
AI_Employee_Vault/Done/: ACTION_Complex_Task.md  ACTION_agents2026 slides .md  ACTION_email_greeting.md  ACTION_test_task.md  APPROVAL_REQUIRED_ACTION_Complex_Task.md  APPROVAL_REQUIRED_Briefing_2026-04-25.md  APPROVAL_REQUIRED_EMAIL_19a7c3f14c0eb78d_Snapchat login code 661246.md  APPROVAL_REQUIRED_EMAIL_19a83d297e355e3c_𝑹𝒐𝒐𝒋 see who just added you as.md  APPROVAL_REQUIRED_EMAIL_19a87bdeae9faea6_GitHub Please download your tw.md  (+170 more)
DropZone/: test_client_request.txt
mcp_servers/: odoo_mock.py
watchers/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py
(+315 files in other folders)
